fix z-index of custom popups

--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -6744,7 +6744,7 @@ nav>ul>li>a i.fas {
     border-radius: 10px;
     box-shadow: 0 4px 10px rgba(30, 30, 30, 0.3);
     max-width: 500px;
-    z-index: 3;
+    z-index: 30;
     opacity: 1;
 
 }
@@ -6791,7 +6791,7 @@ nav>ul>li>a i.fas {
   border-radius: 10px;
   box-shadow: 0 4px 10px rgba(30, 30, 30, 0.3);
   max-width: 300px;
-  z-index: 3;
+  z-index: 30;
   opacity: .85;
 }
 
